Fixed bug with prev/next flowing out of box when spanning two lines

--- a/style.css
+++ b/style.css
@@ -190,8 +190,6 @@ h2 a, h2 a:hover {
 }
 
 #main article img, #main article iframe {
-    max-width: 100%;
-    height: auto;
     margin: 0 auto !important;
 }
 
@@ -207,7 +205,7 @@ h2 a, h2 a:hover {
 }
 
 #main #prevnext {
-    height: 20px;
+    height: 100%;
     min-height: 20px;
     padding: 5px 20px;
 }
@@ -287,52 +285,4 @@ h2 a, h2 a:hover {
     margin: 10px auto;
     display: block;
     text-indent: -10000px;
-}
-
-@media only screen and (max-width: 760px) {
-    body {
-        background: #fff;
-    }
-
-    #nav {
-        position: static;
-        min-width: 0;
-        min-height: 30px;
-    }
-
-    #nav .nav-holder, #nav ul {
-        max-width: 100%;
-    }
-
-    #header, #main article, #main #prevnext, #friends {
-        width: 98%;
-        border: 0;
-        padding: 1%;
-        min-width: 0;
-    }
-
-    #header {
-        margin-top: 10px;
-    }
-
-    #footer {
-        min-width: 0;
-    }
-}
-
-@media only screen and (max-width: 450px) {
-
-    #footer #bytemark {
-        width: 235px;
-    }
-}
-
-@media only screen and (max-width: 1350px) {
-
-    #twitter-badge {
-        position: static;
-        clear: both;
-        text-align: center;
-        margin: 10px auto;
-    }
 }
